# comfy-model-daemon

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.txt
daemon/: __init__.py  __main__.py  config.yaml  daemon.py  downloader.py  model_resolver.py  state.py  watcher.py  workflow_parser.py
tests/: test_basic.py
