[project]
name = "comfy-model-daemon"
version = "0.1.0"
description = "A lightweight daemon that resolves and downloads models required by ComfyUI workflows."
authors = [
    { name = "Ray", email = "example@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "watchdog==4.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

